--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Love</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="reproductor.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		/>
 	</head>
 	<body>
 		<div class="contenido open" id="contenido">
@@ -15,23 +20,105 @@
 					<p class="feliz">feliz</p>
 					<h1>Cumpleaños</h1>
 					<p class="rosmery">Rosmery</p>
-					<img src="./assets/sombrero.png" class="sombrero">
+					<img src="./assets/sombrero.png" class="sombrero" />
 				</div>
 				<div class="heart" onclick="abrirFelicitaciones()"></div>
 			</section>
-			<section class="section-felicitaciones" id="felicitaciones">				
+			<section class="section-felicitaciones" id="felicitaciones">
 				<div class="contenido-felicitaciones">
-					<img src="./assets/foto2.jpg" class="foto uno">
-					<img src="./assets/toonmecom_97c5fb.jpg" class="foto dos">
+					<img
+						src="./assets/love-song.png"
+						class="musica"
+						onclick="abrirMusica()"
+					/>
+					<img src="./assets/foto2.jpg" class="foto uno" />
+					<img src="./assets/toonmecom_97c5fb.jpg" class="foto dos" />
 					<h3>feliz</h3>
 					<h1>Cumpleaños</h1>
 					<h3>amor</h3>
-					<p>Me siento muy afortunado de conocerte. Espero que tu cumpleaños sea tan especial como tú. Que todos tus sueños se hagan realidad y que cumplas todos tus obejtivos que te propongas. ¡Muchas felicidades!</p>
-					<img src="assets/carta-de-amor.png" class="abrir_carta" onclick="abrirCarta()"/>
+					<p>
+						Me siento muy afortunado de conocerte. Espero que tu
+						cumpleaños sea tan especial como tú. Que todos tus
+						sueños se hagan realidad y que cumplas todos tus
+						obejtivos que te propongas. ¡Muchas felicidades!
+					</p>
+					<img
+						src="assets/carta-de-amor.png"
+						class="abrir_carta"
+						onclick="abrirCarta()"
+					/>
 				</div>
 			</section>
+			<!-- Musica  -->
+			<div class="wrapper close" id="wrapper">
+				<div class="top-bar">
+					<i class="material-icons" id="closeMusic">close</i>
+					<span>Escuchando</span>
+				</div>
+				<div class="img-area">
+					<img src="" alt="" />
+				</div>
+				<div class="song-details">
+					<p class="name"></p>
+					<p class="artist"></p>
+				</div>
+				<div class="progress-vol">
+					<div class="progress-area">
+						<div class="progress-bar">
+							<audio id="main-audio" src=""></audio>
+						</div>
+						<div class="song-timer">
+							<span class="current-time">0:00</span>
+							<span class="max-duration">0:00</span>
+						</div>
+					</div>
+					<div class="volumen">
+						<input
+							type="range"
+							id="vol"
+							min="0"
+							max="1"
+							value="1"
+							orient="vertical"
+							step="0.1"
+						/>
+						<i class="material-icons">volume_up</i>
+					</div>
+				</div>
+				<div class="controls">
+					<i
+						id="repeat-plist"
+						class="material-icons"
+						title="Playlist looped"
+						>repeat</i
+					>
+					<i id="prev" class="material-icons">skip_previous</i>
+					<div class="play-pause">
+						<i class="material-icons play">play_arrow</i>
+					</div>
+					<i id="next" class="material-icons">skip_next</i>
+					<i id="more-music" class="material-icons">queue_music</i>
+				</div>
+				<div class="music-list">
+					<div class="header">
+						<div class="row">
+							<i class="list material-icons">queue_music</i>
+							<span>Lista musical</span>
+						</div>
+						<i id="close" class="material-icons">close</i>
+					</div>
+					<ul>
+						<!-- here li list are coming from js -->
+					</ul>
+				</div>
+			</div>
 			<section class="section-carta" id="carta">
 				<div class="carta">
+					<img
+						src="./assets/love-song.png"
+						class="musica"
+						onclick="abrirMusica()"
+					/>
 					<h1 class="carta__titulo">¡Feliz cumpleaños, mi amor!</h1>
 					<p class="carta__texto">
 						Quiero aprovechar este hermoso día para decirte que eres
@@ -52,6 +139,8 @@
 			</section>
 			<section class="section-galeria" id="galeria"></section>
 		</div>
-		<script src="script.js" />
+		<script src="script.js"></script>
+		<script src="js/music-list.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
