--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Love</title>
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="reproductor.css" />
 		<link
@@ -42,6 +43,7 @@
 						sueños se hagan realidad y que cumplas todos tus
 						obejtivos que te propongas. ¡Muchas felicidades!
 					</p>
+					<div class="regalo"></div>
 					<img
 						src="assets/carta-de-amor.png"
 						class="abrir_carta"
